--- a/_i18n/en/_posts/2017-07-23-bitcoin.md
+++ b/_i18n/en/_posts/2017-07-23-bitcoin.md
@@ -29,7 +29,7 @@ and represent the current value of one Bitcoin in Euro, the rank, the market cap
 <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script><div class="coinmarketcap-currency-widget" data-currency="bitcoin" data-base="EUR" data-secondary="" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="EUR" data-statsticker="false"></div>
 
 
-#### Desgin
+#### Design
 
 Bitcoin's foundation is a [Blockchain](/en/article/blockchain) and the general purpose is to make digital payments. Every user has his own Bitcoin-adress and can send his Bitcoins to other people in the network.
 Once a transaction is made, it can never be reverted or manipulated again.
@@ -59,7 +59,7 @@ The technology behind Bitcoin is publicly available which serves as a foundation
 
 Bitcoin is only a network for financial transactions. Other currencies like [Ethereum](/en/article/ethereum), can also be used for many other purposes and future developements other than only the financial sector.
 
-The usual blocktime, the time needed to calculate a new block, is 10min within the Bitcoin-networt. This is, compared to other currencies, too slow and creates some problems. With more and more transactions are coming into the network, this will slow it down even more. One problem of this is, that it would be difficult to pay in a store, when every transaction is taking that much time.
+The usual blocktime, the time needed to calculate a new block, is 10min within the Bitcoin-network. This is, compared to other currencies, too slow and creates some problems. With more and more transactions are coming into the network, this will slow it down even more. One problem of this is, that it would be difficult to pay in a store, when every transaction is taking that much time.
 
 #### How can I get Bitcoin?
 
