--- a/_i18n/de/_posts/2017-07-23-bitcoin.md
+++ b/_i18n/de/_posts/2017-07-23-bitcoin.md
@@ -8,6 +8,7 @@ language: de
 categories:
   - beginner
   - bitcoin
+  - sticky
 header_image: "/article/bitcoin/header.png"
 thumbnail_image: "/article/bitcoin/thumbnail.jpg"
 ---
